--- a/components/src/Components/TransactionHistory/TransactionHistory.module.css
+++ b/components/src/Components/TransactionHistory/TransactionHistory.module.css
@@ -2,13 +2,14 @@
   border-collapse: collapse;
   border: 2px solid rgb(200, 200, 200);
   letter-spacing: 1px;
+  margin: 0 auto 50px auto; 
 }
-tr,
-th{
+.table-row,
+.table-header{
   border: 1px solid rgb(190, 190, 190);
-    padding: 5px 50px;
+  padding: 5px 50px; 
 }
 
-th{
+.table-header{
   background-color: cadetblue;
 }
