--- a/components/src/Components/TransactionHistory/TransactionHistoryItem/TransactionHistoryItem.module.css
+++ b/components/src/Components/TransactionHistory/TransactionHistoryItem/TransactionHistoryItem.module.css
@@ -1,7 +1,7 @@
-td{
+.table-data{
   border: 1px solid rgb(190, 190, 190);
     padding: 5px 50px;
 }
-tr:nth-child(2n){
+.table-row:nth-child(2n){
   background-color: rgb(184, 231, 231);
 }
